<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F2F4F6">

    <!-- Toolbar -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/skyBlue"
        android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar">

        <ImageButton
            android:id="@+id/backs_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="start"
            android:scaleType="centerInside"
            android:background="?attr/selectableItemBackground"
            android:src="@drawable/ic_arrow_back"
            android:fontFamily="@font/kangwon_tntnche"
            android:textStyle="bold"
            app:iconTint="@android:color/white"
            android:contentDescription="@string/back_button" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/kangwon_tntnche"
            android:gravity="center"
            android:text="제목입니다."
            android:textColor="#FFFFFF"
            android:textSize="35sp" />
    </androidx.appcompat.widget.Toolbar>

    <!-- Info Row -->
    <LinearLayout
        android:id="@+id/info_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/toolbar"
        android:layout_marginTop="10dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp">

        <TextView
            android:id="@+id/teacher_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="작성자 | OOO"
            android:textSize="20sp"
            android:fontFamily="@font/im_hyemin_regular" />

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="20xx. 08. 03"
            android:textSize="17sp"
            android:textAlignment="viewEnd"
            android:fontFamily="@font/im_hyemin_regular" />
    </LinearLayout>

    <!-- Divider -->
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/info_row"
        android:layout_marginTop="5dp"
        android:background="#9B9D9F" />

    <!-- Content -->
    <ScrollView
        android:id="@+id/content_scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/btnApply"
        android:layout_below="@id/info_row"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp">

        <TextView
            android:id="@+id/content_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/im_hyemin_bold"
            android:text="@string/contentMsg"
            android:textColor="#000000"
            android:textSize="30sp" />
    </ScrollView>

    <!-- Apply Button -->
    <Button
        android:id="@+id/btnApply"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="@string/apply_button"
        android:fontFamily="@font/kangwon_tntnche"
        android:textSize="25sp"
        android:backgroundTint="@color/skyBlue"
        android:textColor="#FFFFFF"
        android:gravity="center"
        android:padding="10dp"
        android:backgroundTintMode="src_in" />

    <!-- Divider Above Button -->
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_above="@id/btnApply"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="5dp"
        android:background="#9B9D9F" />
</RelativeLayout>
